# bytedanceai

./: .gitignore  AGENTS.md  Makefile  README.md  package.json  pnpm-lock.yaml
.husky/: commit-msg  (+1 more)
agentend/: .env.example  .gitignore  AGENTS.md  agents.json  config.yaml  pyproject.toml
agentend/docs/backlog/: orchestrator-drawbacks.md  session-persistence.md  system-architecture-and-frontend-cards.md  trace-system.md
agentend/docs/common/: adapter-diff.md  details.md
agentend/docs/design/: 00-architecture.md  01-schemas.md  02-adapters.md  03-session.md  04-rules.md  05-api.md  06-app-wiring.md  07-session-mapping.md  08-workspace.md  09-cli-session-id-writeback.md  10-workspace-branch-cleanup.md  11-orchestrator-planning.md  12-cli-adapter-comparison.md  13-preview-server.md  14-pin-memory.md  15-merge-conflict-resolution.md  16-system-prompt-tuning.md  17-conversation-memory.md  18-langsmith-trace.md  19-skills-taskctl.md  20-planning-context-module.md  21-unpin-history-persistence.md  architecture.md  conversation-memory.md  orchestrator-trace.md  trace-system.md
agentend/docs/impl/: 01-schemas.md  03-session.md  04-rules.md  10-workspace-branch-cleanup.md  architecture.md
agentend/docs/playbooks/: 03-taskctl-merge.md  04-orchestrator-planning.md
agentend/docs/reference/: adapter-diff.md  details.md  langsmith-trace.md  orchestrator-architecture.md
agentend/docs/test/: 01-session-id-writeback.md
agentend/docs/testing/: 01-session-id-writeback.md  (+1 more)
agentend/tests/: test_codex_adapter.py  test_orchestrator_presentation.py  test_orchestrator_shared.py
(+881 files in other folders)
